# packtpub

learn_C_programming_2nd_edition/01_helloWorld/: a.out  hello1.c
learn_C_programming_2nd_edition/02_Understanding_program_structure/: a.out
learn_C_programming_2nd_edition/03_data_types/: sizes_ranges1
learn_C_programming_2nd_edition/04_variables_and_assignments/: length.c
learn_C_programming_2nd_edition/05_operators_expressions/: convert_digit_to_int  logical  over_under_flow.c  prefix_incrementation  ternary  ternary.c
learn_C_programming_2nd_edition/06_conditional_program_flow/: calc  leapyear1
learn_C_programming_2nd_edition/07_loops_and_iterations/: 05_prime_number.c  06_sumPrimeNumbers.c  square_root.c  sum_doWhile.c  sum_for  sum_for.c  sum_gauss  sum_gauss.c  sum_while  sum_while.c
learn_C_programming_2nd_edition/08_enumerations/: sides.c  testenum.c
learn_C_programming_2nd_edition/chapter_02/: functionPrototype  functionPrototypes.c  hello2  hello2.c  hello3  hello3.c  printingEscapeSequences.c
learn_C_programming_2nd_edition/chapter_03/: sizes_ranges1.c
learn_C_programming_2nd_edition/chapter_04/: length
learn_C_programming_2nd_edition/chapter_05/: casting  casting.c  convertTemp  convertTemp.c  convert_digit_to_int.c  convert_upper_lower  convert_upper_lower.c  logical.c  over_under_flow  prefix_incrementation.c  truncRounding  truncRounding.c
mastering_python_2nd_edition/: pyproject.toml
mastering_python_2nd_edition/python_syntax/: Time_complexity-The_big_O_notation.ipynb
python syntax/: python_syntax.ipynb
(+4 files in other folders)
