[tool.poetry]
name = "packtpub"
version = "0.1.0"
description = "learning from Packt Books"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
numpy = "^1.23.3"
scipy = "^1.9.1"
pandas = "^1.4.4"
Pint = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pyflakes = "^2.5.0"
pylint = "^2.15.2"
pytest = "^7.1.3"
isort = "^5.10.1"
ipython = "^8.5.0"
jupyterlab ="^3.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
